5. Changed div.footer to footer.footer -> maybe header should remain header if we have a footer tag?
6. Changed div.benefits to section.benefits
7. changed title of webpage to "Horiseon Social Solution Services"
8. Consolidated all of the .benefit-xxxx h3 - those h3's are the only h3's on the page, so it's unnecesary to ha 3 different style rules
9. Consolidate .benefit-xxx rules into one rule under .benefits div
10. Change .benefits div selector to list out .benefit-xxxx
11. Added alt attributes to all the images
12. Got rid of an extraneous </img> tag.
13. Changes div.search-engine-optimization to div#search-engine-optimization to work with link
14. Got rid of .online-reputation-management & .social-media-marketing as there are id's that match those names; use # instead to style.
15. Changed class selectors as above to id selectors
16. Merged #social-media-marketing, #online-reputation-management, #search-engine-optimization style rules in style.css
17. Merged #search-engine-optimization img,
#online-reputation-management img,
#social-media-marketing img styles in style.css
18. Changed h3 rule back to .benefit-xxxx h3 and merged separate rules for easier maintainability.
19. Merged .benefit-xxxx img rules into one rule.
20. Merged #search-engine-optimization h2,
#online-reputation-management h2,
#social-media-marketing h2 rule into one rule in style.css.
21. Changed the section.benefits to aside.benefits
22. Changed section.content to main.content
23. Moved <link:css> 1 line down, below <title> element
24. Minor changes to formatting of <img> tags
25. Remove "/" from meta tag - extraneous
26. Replaced div.benefit-xxxx with section.benefit-xxx
27. cut down .header h1 .seo style to just .seo as .seo is specific enough and the others are extraneous
28. Changed nav.header to header.header
29. Changed header.header>div>ul... to header.header>nav>ul...
30. Changed div#search-engine-optimization, #online-reputation-management, #social-media-marketing to section element