@@ -60,7 +60,8 @@
             - Changed div#social-media-marketing to section#social-media-marketing -->
         <section id="social-media-marketing">
             <!-- -Added alt="Social Media Idea Roundtable
-                - Added title="Social Media Idea Roundtable" -->
+                - Added title="Social Media Idea Roundtable" 
+                -Deleted unnecessary </img>, added "/" to end of <img> tag-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Idea Roundtable" title="Social Media Idea Roundtable" />
             <h2>Social Media Marketing</h2>
             <p>
