@@ -32,3 +32,4 @@
 28. Changed nav.header to header.header
 29. Changed header.header>div>ul... to header.header>nav>ul...
 30. Changed div#search-engine-optimization, #online-reputation-management, #social-media-marketing to section element
+31. Changed nav related element selectors in style.css
